--- a/tasks/db/aws/aws.main.db.yml
+++ b/tasks/db/aws/aws.main.db.yml
@@ -35,6 +35,70 @@
     (ext_db_item.own_cluster | default(false) | bool)
   no_log: "{{ env_no_log }}"
 
+- name: "{{ inner_service_title }} - aws db (rds) - vpc info (for subnet group)"
+  amazon.aws.ec2_vpc_net_info:
+    access_key: "{{ ext_db_item.access_key }}"
+    secret_key: "{{ ext_db_item.secret_key }}"
+    region: "{{ ext_db_item.region }}"
+    filters:
+      "tag:Name": "{{ ext_db_item.vpc_name }}"
+  loop: "{{ ext_db_data_wrapper.data.list }}"
+  loop_control:
+    loop_var: ext_db_item
+    label: "{{ ext_db_item.name }}"
+  when: >-
+    ((ext_db_item.vpc_name | default('')) != '')
+    and
+    ((ext_db_item.subnet_name | default('')) != '')
+    and
+    (ext_db_item.state == 'present')
+  register: ext_db_vpc_info
+  no_log: "{{ env_no_log }}"
+
+- name: "{{ inner_service_title }} - aws db (rds) - subnet info (for subnet group)"
+  vars:
+    ext_db_item: "{{ ext_db_item_vpn.ext_db_item | default({}) }}"
+    ext_vpn_vpc_id: "{{ ext_db_item_vpn.vpcs[0].id | default('') }}"
+  amazon.aws.ec2_vpc_subnet_info:
+    access_key: "{{ ext_db_item.access_key }}"
+    secret_key: "{{ ext_db_item.secret_key }}"
+    region: "{{ ext_db_item.region }}"
+    filters:
+      vpc-id: "{{ ext_vpn_vpc_id }}"
+      "tag:Name": "{{ ext_db_item.subnet_name }}"
+  loop: "{{ ext_db_vpc_info.results | default([]) }}"
+  loop_control:
+    loop_var: ext_db_item_vpn
+    label: "{{ ext_db_item.name }} ({{ ext_vpn_vpc_id }})"
+  when: >-
+    ((ext_db_item.subnet_name | default('')) != '')
+    and
+    (ext_vpn_vpc_id != '')
+  register: ext_db_subnet_info
+  no_log: "{{ env_no_log }}"
+
+- name: "{{ inner_service_title }} - aws db (rds) - create subnet group"
+  vars:
+    ext_db_item_vpn: "{{ ext_db_item_subnet.ext_db_item_vpn | default({}) }}"
+    ext_db_item: "{{ ext_db_item_vpn.ext_db_item | default({}) }}"
+    ext_vpn_subnet_id: "{{ ext_db_item_subnet.subnets[0].id | default('') }}"
+  community.aws.rds_subnet_group:
+    state: "present"
+    access_key: "{{ ext_vpn_item.access_key }}"
+    secret_key: "{{ ext_vpn_item.secret_key }}"
+    region: "{{ ext_vpn_item.region }}"
+    name: "{{ ext_db_item.name }}-subnet-group"
+    subnets: ["{{ ext_vpn_subnet_id }}"]
+  loop: "{{ ext_db_subnet_info.results | default([]) }}"
+  loop_control:
+    loop_var: ext_db_item_subnet
+    label: "{{ ext_db_item.name }}"
+  when: >-
+    ((ext_db_item.name | default('')) != '')
+    and
+    (ext_vpn_subnet_id != '')
+  no_log: "{{ env_no_log }}"
+
 - name: "{{ inner_service_title }} - aws db (rds) - main"
   community.aws.rds_instance:
     db_instance_identifier: "{{ ext_db_item.name }}"
@@ -55,7 +119,11 @@
     db_parameter_group_name: "{{ ext_db_item.db_parameter_group_name | default(omit) }}"
     db_security_groups: "{{ ext_db_item.db_security_groups | default(omit) }}"
     db_snapshot_identifier: "{{ ext_db_item.db_snapshot_identifier | default(omit) }}"
-    db_subnet_group_name: "{{ ext_db_item.db_subnet_group_name | default(omit) }}"
+    db_subnet_group_name: >-
+      {{
+        ((ext_db_item.subnet_name | default('')) != '')
+        | ternary(ext_db_item.name + '-subnet-group', omit)
+      }}
     domain: "{{ ext_db_item.domain | default(omit) }}"
     domain_iam_role_name: "{{ ext_db_item.domain_iam_role_name | default(omit) }}"
     enable_cloudwatch_logs_exports: "{{ ext_db_item.enable_cloudwatch_logs_exports | default(omit) }}"
@@ -125,6 +193,23 @@
   loop_control:
     loop_var: ext_db_item
     label: "[{{ ext_db_item.state }}] {{ ext_db_item.name }}"
+  no_log: "{{ env_no_log }}"
+
+- name: "{{ inner_service_title }} - aws db (rds) - delete subnet group"
+  community.aws.rds_subnet_group:
+    state: "absent"
+    access_key: "{{ ext_db_item.access_key }}"
+    secret_key: "{{ ext_db_item.secret_key }}"
+    region: "{{ ext_db_item.region }}"
+    name: "{{ ext_db_item.name }}-subnet-group"
+  loop: "{{ ext_db_data_wrapper.data.list }}"
+  loop_control:
+    loop_var: ext_db_item
+    label: "{{ ext_db_item.name }}"
+  when: >-
+    (ext_db_item.state == 'absent')
+    and
+    (((ext_db_item.subnets | default([])) | length) > 0)
   no_log: "{{ env_no_log }}"
 
 - name: "{{ inner_service_title }} - aws db (rds) - delete cluster(s)"
