--- a/tasks/node/aws/aws.main.node.yml
+++ b/tasks/node/aws/aws.main.node.yml
@@ -13,31 +13,44 @@
 
 - name: "{{ inner_service_title }} - aws node - vpc - info"
   vars:
-    ext_node_vcp_info: "{{ ext_node_data_wrapper.data.vpc | default({}) }}"
+    ext_node_vcp_info: "{{ ext_node_data_wrapper.data.subnet | default({}) }}"
+    ext_node_vcp_name: "{{ ext_node_vcp_info.vpc | default('') }}"
   amazon.aws.ec2_vpc_net_info:
     access_key: "{{ ext_node_vcp_info.access_key }}"
     secret_key: "{{ ext_node_vcp_info.secret_key }}"
     region: "{{ ext_node_vcp_info.region }}"
     filters:
-      "tag:Name": "{{ ext_node_vcp_info.name }}"
-  when: (ext_node_vcp_info.name | default('')) != ''
+      "tag:Name": "{{ ext_node_vcp_name }}"
+  when: ext_node_vcp_name != ''
   register: ext_node_vpc_info
   no_log: "{{ env_no_log }}"
 
 - name: "{{ inner_service_title }} - aws node - subnet - info"
   vars:
-    ext_node_vcp_info: "{{ ext_node_data_wrapper.data.vpc | default({}) }}"
-    ext_node_vpc_id: "{{ ext_node_vpc_info.vpcs[0].id | default('') }}"
+    ext_node_vcp_info: "{{ ext_node_data_wrapper.data.subnet | default({}) }}"
+    ext_node_vpc_id: "{{ ext_node_vpc_info.vpcs[0].id | default(omit) }}"
+    ext_node_subnet_name: "{{ ext_node_vcp_info.subnet | default('') }}"
   amazon.aws.ec2_vpc_subnet_info:
     access_key: "{{ ext_node_vcp_info.access_key }}"
     secret_key: "{{ ext_node_vcp_info.secret_key }}"
     region: "{{ ext_node_vcp_info.region }}"
     filters:
       vpc-id: "{{ ext_node_vpc_id }}"
-      "tag:Name": "{{ ext_node_vcp_info.subnet }}"
-  when: ext_node_vpc_id != ''
+      "tag:Name": "{{ ext_node_subnet_name }}"
+  when: ext_node_subnet_name != ''
   register: ext_node_subnet_info
   no_log: "{{ env_no_log }}"
+
+- name: "{{ inner_service_title }} - aws node - verify subnet"
+  vars:
+    ext_node_vcp_info: "{{ ext_node_data_wrapper.data.subnet | default({}) }}"
+    ext_node_subnet_id_default: "{{ ext_node_subnet_info.subnets[0].subnet_id | default('') }}"
+    ext_node_subnet_name: "{{ ext_node_vcp_info.subnet | default('') }}"
+  fail:
+    msg: "subnet {{ ext_node_subnet_name }} does not exist or was not found"
+  when: (ext_node_subnet_name != '') and (ext_node_subnet_id_default == '')
+  no_log: "{{ env_no_log }}"
+  tags: ["no_print"]
 
 - name: "{{ inner_service_title }} - aws node - execute"
   vars:
